fix: update title and description in index.html for clarity; add robots.txt for SEO

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         
         <!-- App Information -->
-        <title>GPX Splitter - Split GPX Files by Distance</title>
-        <meta name="description" content="Split GPX track files by distance with interactive elevation charts and maps. Secure, client-side processing with no data upload required." />
+        <title>GPX Splitter - Split GPX Track Files</title>
+        <meta name="description" content="Split GPX track files into segments with interactive elevation charts and maps. Secure, client-side processing with no data upload required." />
         <meta name="keywords" content="GPX, track, split, hiking, cycling, GPS, elevation, map" />
         <meta name="author" content="GPX Splitter" />
         
