fix: move security headers to _headers file for Cloudflare Pages configuration

--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
         <link rel="apple-touch-icon" sizes="152x152" href="/icons/gpx-splitter-icon-152.png" />
         <meta name="theme-color" content="#059669" />
         
-        <!-- Security Headers (for static hosting) -->
-        <meta http-equiv="X-Content-Type-Options" content="nosniff" />
-        <meta http-equiv="X-Frame-Options" content="DENY" />
-        <meta http-equiv="X-XSS-Protection" content="1; mode=block" />
+        <!-- Security Headers (set via HTTP headers in public/_headers for Cloudflare Pages) -->
         <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin" />
         
         <!-- Preload critical resources for performance -->
