feat: add Open Graph and Twitter meta tags for improved social sharing; update robots.txt and create sitemap.xml

--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
         <meta name="description" content="Split GPX track files into segments with interactive elevation charts and maps. Secure, client-side processing with no data upload required." />
         <meta name="keywords" content="GPX, track, split, hiking, cycling, GPS, elevation, map" />
         <meta name="author" content="GPX Splitter" />
-        
+
+        <!-- Open Graph (social sharing: Slack, iMessage, Facebook, etc.) -->
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="GPX Splitter - Split GPX Track Files" />
+        <meta property="og:description" content="Split GPX track files into segments with interactive elevation charts and maps. Secure, client-side processing with no data upload required." />
+        <meta property="og:image" content="/icons/gpx-splitter-icon-512.png" />
+        <meta property="og:url" content="https://gpx-splitter.pages.dev" />
+        <meta property="og:site_name" content="GPX Splitter" />
+
+        <!-- Twitter / X card -->
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:title" content="GPX Splitter - Split GPX Track Files" />
+        <meta name="twitter:description" content="Split GPX track files into segments with interactive elevation charts and maps. Secure, client-side processing with no data upload required." />
+        <meta name="twitter:image" content="/icons/gpx-splitter-icon-512.png" />
+
+        <!-- Canonical URL -->
+        <link rel="canonical" href="https://gpx-splitter.pages.dev" />
+
         <!-- App Icons -->
         <link rel="icon" type="image/png" sizes="32x32" href="/icons/gpx-splitter-icon-32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="/icons/gpx-splitter-icon-16.png" />
